# giteasy

./: README.md  pyproject.toml  requirements.txt
src/giteasy/: __init__.py  consts.py  funcs.py  github.py  github_async.py  github_releases.py  github_repo.py  githubb.py  main.py  repo.py
tests/: github_repo.py  t_github.py  t_github_async.py  t_github_releases.py  t_githubb.py  test.py
