[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "giteasy"
version = "10.2.1"
authors = [{ name = "Mahdi Mir", email = "imahdimir@gmail.com" }]
description = "A simple tool to get last/full version of a github repository and committing back to it"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "dulwich",
    "PyGithub",
    "mirutil",
    "purl~=1.6",
    "mtok"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities"]
keywords = [
]

[project.urls]
"Homepage" = "https://github.com/imahdimir/giteasy"
"Bug Tracker" = "https://github.com/imahdimir/giteasy/issues"
